# dataport-ai

./: .gitignore  LICENSE  README.md  capture_screenshots.py  install.bat  install.sh  pyproject.toml  verify_pipeline.py
samples/: student_grades.csv
src/: __init__.py  cleanse.py  cli.py  export.py  ingest.py  insights.py  logger.py  narrate.py  profile.py  tui.py
