[project]
name = "dataport-ai"
version = "0.1.0"
description = "Dataport AI for Tableau — AI-powered data ingestion: profile, cleanse, and narrate spreadsheets into Tableau-ready extracts"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "tableauhyperapi>=0.0.19000",
    "jinja2>=3.1",
    "textual>=0.60",
]

[project.scripts]
dataport = "src.cli:app"
dataport-tui = "src.tui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
